--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 jupyterlab==3.2.1
 torch==1.9.0
 torchvision==0.10.0
-tensorboard==2.7.0
 pytorchyolo==1.5.2
 pandas==1.1.5
 torchsummary==1.5.1
+pyhocon
