--- a/app.conf
+++ b/app.conf
@@ -1,5 +1,9 @@
-conf {
-    
+directories {
+    main: "/work3/s203257"
+    models: "save_model"
+    raw: "_raw"
+    split: "_processed"
+    annotation: "_annot" 
 }
 logging {
     level: DEBUG
